forkjoinpool and gc